# function-renderer

./: Cargo.toml  LICENSE-MIT  README.md  history.txt  typos.toml
.github/workflows/: release.yml
icon-font/: config.json
pumice/: Cargo.toml  LICENSE-MIT
pumice/src/: deep_copy.rs  dumb_hash.rs  lib.rs  surface.rs  vk.rs  vk10.rs  vk11.rs
pumice/src/extensions/: ext_debug_report.rs  ext_debug_utils.rs  ext_directfb_surface.rs  ext_headless_surface.rs  ext_metal_surface.rs  ext_scalar_block_layout.rs  ext_shader_subgroup_ballot.rs  fuchsia_imagepipe_surface.rs  ggp_stream_descriptor_surface.rs  khr_android_surface.rs  khr_create_renderpass2.rs  khr_depth_stencil_resolve.rs  khr_dynamic_rendering.rs  khr_get_physical_device_properties2.rs  khr_image_format_list.rs  khr_imageless_framebuffer.rs  khr_maintenance2.rs  khr_multiview.rs  khr_shader_non_semantic_info.rs  khr_surface.rs  khr_swapchain.rs  khr_synchronization2.rs  khr_timeline_semaphore.rs  khr_wayland_surface.rs  khr_win32_surface.rs  khr_xcb_surface.rs  khr_xlib_surface.rs  metadata.rs  mod.rs  mvk_ios_surface.rs  mvk_macos_surface.rs  nn_vi_surface.rs  qnx_screen_surface.rs
pumice/src/loader/: mod.rs  tables.rs
pumice/src/util/: access.rs  config.rs  format.rs  impl_macros.rs  mod.rs  pnext.rs  stage.rs
shaders/: common.glsl  common.h  compute.comp  compute.wgsl  compute_descriptors.glsl  compute_vertex.comp  emit_triangles.comp  intersect.comp  mesh.frag  mesh.vert  populate_grid.comp
shaders/gui/: fragment.spv  shader.frag  shader.vert  vertex.spv
src/: arcball.rs  embed.rs  hotreaload.rs  main.rs  mesh_pass.rs  parser.rs  pass.rs  recomputation.rs  write.rs  yawpitch.rs
src/gui/: decorations.rs  icons.rs  mod.rs  renderer.rs  state.rs  util.rs  window.rs
src/parse/: mod.rs  parser.rs  tape.rs  write.rs
src/passes/: lambda.rs  mesh.rs  mod.rs
src/stl/: mod.rs
