[package]
name = "function-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.'https://github.com/mihavlic/vulkan-bindings']
pumice = { path = "./pumice" }

[patch.'https://github.com/mihavlic/vulkan-engine']
graph = { path = "../vulkan-engine" }

[dependencies]
pumice = {git = "https://github.com/mihavlic/vulkan-bindings.git", features = ["wrappers"]}
pumice-vma = {git = "https://github.com/mihavlic/pumice-vma.git", features = ["VK_VERSION_1_1"]}
graph = {git = "https://github.com/mihavlic/vulkan-engine.git"}
winit = {version = "0.28.1", default-features = false, features = ["wayland", "x11"]}
notify = "5.1.0"
rustyline = "10.1.0"
glam = "0.22.0"
dolly = "0.4.0"