cargo-features = ["profile-rustflags"]

[package]
name = "function-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.'https://github.com/mihavlic/vulkan-bindings']
pumice = { path = "./pumice" }

[patch.'https://github.com/mihavlic/vulkan-engine']
graph = { path = "../vulkan-engine" }

[dependencies]
pumice = {git = "https://github.com/mihavlic/vulkan-bindings.git", features = ["wrappers"]}
pumice-vma = {git = "https://github.com/mihavlic/pumice-vma.git", features = ["VK_VERSION_1_1"]}
graph = {git = "https://github.com/mihavlic/vulkan-engine.git"}

winit = {version = "0.28.1"}
egui = "0.21.0"
egui-winit = "0.21.1"
slice-group-by = "0.3.0"
image = "0.24.4"

notify = "5.1.0"
rustyline = "10.0.0"
glam = "0.23.0"
dolly = "0.4.1"
ahash = "0.8.3"
shaderc = "0.8.2"

[profile.dev.package."egui"]
opt-level = 2
[profile.dev.package."egui-winit"]
opt-level = 2
[profile.dev.package."pumice"]
opt-level = 2
[profile.dev.package."pumice-vma"]
opt-level = 2
# [profile.dev.package."graph"]
# opt-level = 2
[profile.dev.package."winit"]
opt-level = 2
[profile.dev.package."notify"]
opt-level = 2
[profile.dev.package."rustyline"]
opt-level = 2
[profile.dev.package."glam"]
opt-level = 2
[profile.dev.package."dolly"]
opt-level = 2
[profile.dev.package."ahash"]
opt-level = 2
[profile.dev.package."shaderc"]
opt-level = 2

# [profile.dev]
# debug = 0