[package]
name = "pumice"
version = "0.1.0"
edition = "2021"

[features]
default = ["loaded", "surface", "wrappers"]
linked = []
loaded = ["libloading"]
surface = ["raw-window-handle"]
global = []
raw = []
wrappers = []
deep_copy = []
dumb_hash = []

[dependencies]
libloading = { version = "0.7", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.3.0", optional = true }